# daily-report-generator

./: .gitignore  .pylintrc  README.md  pyproject.toml  run.py
src/: __init__.py  ai_processor.py  config.py  data_processor.py  image_processor.py  main.py  report_generator.py  test_ai.py  test_capa.py  test_watermark.py
